--- a/web/src/app/index/index.component.html
+++ b/web/src/app/index/index.component.html
@@ -5,7 +5,7 @@
   <div routerLink="/books">
      - List of Books
   </div>
-  <div routerLink="['/user',user.id]">
+  <div routerLink="user-details">
     - Edit user information
   </div>
 </div>
